labs/lab2/testsuite/good/subtyping/cmp_while_int_eq_double.cc
int main () {
	while (3 == 3.1) {}
	return 0;
}
