labs/lab2/testsuite/bad/return_check_all2.cc
int main() {
  return 0.0;
  return 0;
}
